--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -5,10 +5,10 @@ author: "Mingrui Li"
 date: today
 format:
   pdf:
-    toc: true
-    toc-depth: 2
     number-sections: true
     fig-cap: true
+    toc: False
+    toc-depth: 2
 editor: visual
 bibliography: references.bib
 link-citations: true
@@ -16,38 +16,125 @@ csl: apa.csl
 execute:
   echo: false
 ---
+
+\textbf{Abstract}
+
+This project aims to generate a linear model to predict the outcome of the 2024 U.S. Presidential Election, using data from several polls combined with a linear regression model. The model, developed in Python, makes use of three key predictors of pollster reliability represented through numeric grade, sample size, and poll quality represented through pollscore to estimate Donald Trump's projected vote share against Kamala Harris. Our model predicts, using the aggregated and cleaned dataset, that Trump will receive 49.7% of the popular vote. We discuss here the methodology of our model and its strengths and limitations: the simplicity of the approach and the fact that it is data-driven are stressed, while obvious limitations, such as the absence of any state-level data or possible biases in the polls, are highlighted. Further developments will add in integration with state-by-state polling to complete electoral college projections and adjustments for factors such as voter turnout and swing state dynamics. This work underlines the relevance of aggregated polling data in election predictions and gives a solid, albeit preliminary, forecast of the 2024 election.
+
 \newpage
+
+\tableofcontents
+
+\newpage
+
 # Introduction
 
-We undertake a poll-of-polls approach to the 2024 U.S. Presidential Election and predict the outcome of the election. We have obtained key predictors from multiple polls and used these in providing a prediction of the share of votes likely to be gained by Donald Trump in comparison with Harris. A linear model developed in Python estimates that the popular vote share of Trump will be **49.7%**. The rest of this report is organized as follows. Section 2 discusses the data we used in this analysis, with the main view of the predictor variables. Section 3 illustrates model set-up and results. Section 4 discusses our results and concludes.
+Election forecasting has always constituted one of those difficult but significant domains of political analysis, especially for high-stake elections like the forthcoming 2024 U.S. Presidential Election. This paper tries to forecast the popular vote shares by the leading candidates between Donald Trump and Kamala Harris through a poll-of-polls approach based on aggregative data from numerous reliable pollsters. We will go over three most important predictors of poll accuracy using a linear regression model in Python: reliability of the pollster, sample size, and poll quality rating. We'll select these variables so as to optimize model precision and to make sure that the polling data is representative and methodologically sound.
 
-# Data
+This analysis uses the cleaned and processed polling data without fringe candidates, standardized vote percentages between the two main candidates, to predict that Donald Trump will win about 49.7% of the popular vote. This approach is very simplified, as the model has strong points in terms of the data-driven methodological construction and the reliance on accessible predictors. However, this paper also acknowledges limitations to state-by-state polling data and traditional methods of polling, which might hold inherent biases.
 
-## Overview
+This report proceeds as follows: Section 2 describes the procedure of data cleaning and model selection that should guarantee the identification of robust predictors. Section 3 gives an account of EDA and graphical representation of main features of this dataset. Section 4 set up a linear model, introduce assumptions, and check predictive accuracy by cross-validation and simulation. Sections 5 and 6 present the results and discuss, respectively, the predictive capabilities of the model, along with its limitations, emphasizing potential improvements that could be added in the future, such as state-by-state polling and voter turnout adjustments. It is our aim in this paper to provide an early but orderly and sound forecast of the Presidential Election of 2024.
 
-We begin by using a dataset of polling data from the 2024 U.S. presidential general election to make an election forecast. The predictors include `numeric_grade`, which represents reliability pollster rating, `sample_size`, and internal ratings of poll quality represented as `pollscore`. We do some cleaning on the dataset, processing it into a format focused around the two main candidates, Donald Trump and Kamala Harris, then scaling the results so their vote percentages add up to 100%. It includes the cleaned predictors and the response variable, scaled_trump_pct, and is stored in analysis_data.xlsx.
+# Data Cleaning and Model Selection
+
+We begin by using a dataset of polling data from the 2024 U.S. presidential general election to make an election forecast. The predictors include `numeric_grade`, which represents reliability pollster rating, `sample_size`, and internal ratings of poll quality represented as `pollscore`. We do some cleaning on the dataset, processing it into a format focused around the two main candidates, Donald Trump and Kamala Harris, then scaling the results so their vote percentages add up to 100%. It includes the cleaned predictors and the response variable, scaled_trump_pct, and is stored in analysis_data.parquet.
 [@fivethirtyeight2024]\
 
-## Measurement
-
-The dataset consists of polls with different methodologies. The key predictor variables include:
+The desired dataset consists of polls with different methodologies. The predictors include:
 
 - **numeric_grade**: A measure of the pollster’s reliability.
 - **sample_size**: The number of respondents in the poll.
 - **pollscore**: A rating of the poll’s overall quality.
 
-After data cleaning, the response variable is the **scaled percentage of Trump’s vote**, calculated as:
+These three predictors, numeric grade, sample size, and pollscore—come because they represent important aspects of poll quality, reliability, and representation that are necessary to make a reasonably accurate forecast of the election outcome. Numeric grade is indicative of the credibility of the pollster and its track record. Higher values indicate greater reliability, and hence that pollster is more likely to produce data representative of public opinion. Sample_size represents the number of respondents, and larger samples reduce sampling error and increase confidence in the poll's findings. The pollscores provide a summary quality rating that measures other factors that could affect a poll's robustness, such as methodological rigor and control for bias. By including these other variables, the model captures strength and quality variables of the polling data that would serve useful in making a more believable forecast of the election outcome.
 
+Since the raw data set consists of a huge amount of data with missing value, sufficient data cleaning is needed. During the process of data cleaning, we removed all data (polls) which does not have a value for all three included response variable above. Also, for the response variable (percentage of vote gained) Harris and Trump gain the majority of votes (above 95%) for almost every polls. Therefore, we removed all percentage of vote gained by other candadates except for Trump and Harris, and scaled the percentage gained by Trump and Harris so that they sums to 100%.
+
+After data cleaning, we reduced the number of polls in raw data of 3227 to 965 in cleande data. The response variable is the **scaled percentage of Trump’s vote**, calculated as:
 
 $\text{scaled\_trump\_pct} = \frac{\text{Trump\_pct}}{\text{Trump\_pct} + \text{Harris\_pct}}$
 
+# Exploratory Data Analysis
+
+We conduct a Exploratory Data Analysis (EDA) here.
+
+```{python}
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+import os
+
+try:
+    current_dir = os.path.dirname(os.path.abspath(__file__))
+except NameError:
+    current_dir = os.getcwd()
+parent_dir = os.path.join(current_dir, '..')
+data_path = os.path.join(parent_dir, 'data', 'analysis_data', 'analysis_data.parquet')
+data = pd.read_parquet(data_path)
+
+print("First few rows of the data:")
+print(data.head())
+
+print("\nSummary statistics:")
+print(data.describe())
+
+print("\nMissing values in each column:")
+print(data.isnull().sum())
+
+```
+
+\begin{center}
+  \textbf{Python Output 1}
+\end{center}
+
+Above we can see the first few rows of the dataset, summary statistics, and information on missing values. Summary statistics will give us an idea about the distribution of each variable, and we can immediately see that numeric_grade has a mean at approximately 2.07, while sample_size seems to have a high standard deviation, meaning a large range in sample sizes taken for the polls. The variables here are centered around zero, as can be seen from the summary statistics-pollscore-and the median for scaled_trump_pct is in the neighborhood of 0.5, indicating that Trump's scaled vote share usually hovers around 0.5. There are no NA values in this data set, meaning the data cleaning process is successful.
+
+```{python}
+
+data.hist(bins=20, figsize=(12, 8))
+plt.suptitle("Distribution of Predictors and Response Variable")
+plt.show()
+
+```
+
+\begin{center}
+  \textbf{Python Output 2}
+\end{center}
+
+The distribution of the variables is represented by using histograms for each variable. numeric_grade is distributed somewhat bimodally. There are a lot of polls rated near 2 and 3. The sample_size histogram is really skew, with a bunch of small sample sizes, but some sample sizes above 10,000. The histogram of pollscore is roughly normally distributed around -0.3, with some peaks that indicate variation in the quality scores of the polls. The histogram for scaled_trump_pct suggests it is generally between 0.45 and 0.55 with a little central tendency for Trump scaled percentage.
+
+```{python}
+plt.figure(figsize=(12, 6))
+for i, column in enumerate(['numeric_grade', 'sample_size', 'pollscore'], 1):
+    plt.subplot(1, 3, i)
+    sns.boxplot(y=data[column])
+    plt.title(f'Box Plot of {column}')
+plt.tight_layout()
+plt.show()
+
+```
+
+\begin{center}
+  \textbf{Python Output 3}
+\end{center}
+
+Boxplots of numeric_grade, sample_size and pollscore The numeric_grade boxplot gives an impression of an approximately spread-out distribution with no serious outliers. The sample_size boxplot has outliers in a few large values to draw attention to the heterogeneity in poll sizes. The pollscore boxplot has a more central and tighter distribution mostly from about -1.5 to 1.5, with some consistency of good quality polls.
+
+[@python]\
 
 # Model
 
 The goal of our modeling strategy is to predict the scaled percentage of votes for Donald Trump. We use a simple **linear regression model** with three predictors: `numeric_grade`, `sample_size`, and `pollscore`. The linear model is represented as:
 
-
 $\text{Trump\_pct} = \alpha + \beta_1 \cdot \text{numeric\_grade} + \beta_2 \cdot \text{sample\_size} + \beta_3 \cdot \text{pollscore}$
+
+## Model Assumption
+
+Our linear regression model requires a number of assumptions to be met if our predictions are to be accurate and meaningful. First, we assume a linear relationship between our predictors (numeric grade, sample size and pollscore) and our response variable, scaled Trump percentage. We believe that for each of these three predictors, a change in the predictor produces a proportional change in Trump's projected vote share. It further assumes that the residuals are independent and not autocorrelated, and homoscedastic—the variance of these errors is constant across all levels of predictors.
+
+We also assumes the normality of residuals. No perfect multicollinearity among the predictors is taken into consideration; otherwise, high correlations may hide the individual effects of the predictors and, consequently, the estimates are not that reliable. Finally, our model assumes that all the relevant variables determining the response have been included in order to avoid any omitted variable bias. Nevertheless, minor deviations will be noted, and future improvements may consider other models in case significant violations of assumptions are found.
+
+## Model Summary
 
 
 ```{python}
@@ -81,19 +168,160 @@ average_predictors = sm.add_constant(average_predictors)
 
 
 ```
-## Model Result
+
 We fit the linear model to the data, which results in the following summary:
+
 ```{python}
 print(model.summary())
 ```
 
 \begin{center}
-  \textbf{Python Output 1}
+  \textbf{Python Output 4}
 \end{center}
 
 [@python]\
 
-## Prediction Result
+Model fitting produced an intercept (constant) of 0.5324, which is interpreted as the baseline level of Trump's projected vote share when the predictor variables all are set to zero. The Beta coefficient on numeric_grade is -0.0160, indicating a small negative relationship between the numeric reliability grade of the pollster and Trump's vote share. The coefficient for sample_size is -2.28e-06, suggesting, at best, a very small negative association between sample size and Trump's projected vote share. Finally, the coefficient on pollscore is -0.0064, which suggests that poll quality has a marginal negative effect on projected vote share.
+
+## Cross Validation
+
+We conducted an 8-fold cross-validation where for each fold, we pre-computed the MSE and then took an average of all the MSEs. We did this in model_fitting.py.
+
+```{python}
+
+import pandas as pd
+import statsmodels.api as sm
+from sklearn.model_selection import KFold
+from sklearn.metrics import mean_squared_error
+import numpy as np
+import pickle
+import os
+
+try:
+    current_dir = os.path.dirname(os.path.abspath(__file__))
+except NameError:
+    current_dir = os.getcwd()
+parent_dir = os.path.join(current_dir, '..')
+data_path = os.path.join(parent_dir, 'data', 'analysis_data', 'analysis_data.parquet')
+data = pd.read_parquet(data_path)
+
+X = data[['numeric_grade', 'sample_size', 'pollscore']]
+y = data['scaled_trump_pct']
+
+X = sm.add_constant(X)
+
+kf = KFold(n_splits=8, shuffle=True, random_state=1)
+fold = 1
+mse_scores = []
+
+for train_index, test_index in kf.split(X):
+    X_train, X_test = X.iloc[train_index], X.iloc[test_index]
+    y_train, y_test = y.iloc[train_index], y.iloc[test_index]
+
+    model = sm.OLS(y_train, X_train).fit()
+
+    y_pred = model.predict(X_test)
+
+    mse = mean_squared_error(y_test, y_pred)
+    mse_scores.append(mse)
+
+    print(f"Fold {fold}: MSE = {mse}")
+    fold += 1
+
+average_mse = np.mean(mse_scores)
+print(f"\nAverage MSE over 8 folds: {average_mse}")
+
+```
+
+\begin{center}
+  \textbf{Python Output 5}
+\end{center}
+
+For our model, the MSE for all folds ranged between 0.0010 and 0.0017, giving us an average of 0.0013. Such consistency in the low MSE across folds indicates that our model has strong predictive accuracy, generalizing well on unseen data, because it tends to perform similarly across various subsets of the dataset. The low average MSE suggests that the model captures key relationships within the data effectively, with minimal error in predicting the response variable.
+
+[@python]\
+
+## Simulation
+
+In this section, we simulate the expected Trump vote share by generating a large dataset that resembles the original dataset and running it through our fitted model. This simulation aims to assess the stability of our predictions and quantify uncertainty around the forecasted vote share for Trump.
+
+### Simulation Process
+
+To create simulated data, we relied on the findings from our exploratory data analysis (EDA). Specifically, we observed key aspects of the distributions for each predictor variable (numeric_grade, sample_size, and pollscore) and designed our simulation based on these insights.
+
+From the histograms generated in the EDA section, we noted the following patterns in each predictor:
+- **numeric_grade** had a bimodal distribution with humps near 2.0 and 3.0 indicating that the majority of the pollsters are graded within these ranges. This variable was created using a **truncated normal distribution**
+- **sample_size** was highly right-skewed, since most polls had relatively small sample sizes, while a few reached as high as 20,000 respondents. We modeled this variable using the **log-normal distribution**, with parameters estimated from the observed data.
+- **pollscore** Was approximately normal with mean -0.3 and SD 0.7 centering around this average value. Simulation : For the simulation of the exercise, we have used a **normal distribution** with mean equal to -0.3 and SD 0.7.
+
+We use these assumptions to generate a dataset of 10,000 rows, each with independent samples of the above distributions for each variable; this serves as a useful benchmark against which to test our model's predictions over a broad range of plausible scenarios, including usual and extreme values. This is done and data is produced as 'simulated_predictions.parquet'.
+
+### Result and Visualization of Simulation
+
+Based on the data generated, we run the simulation using our model.
+
+```{python}
+
+import os
+import pandas as pd
+import pickle
+import numpy as np
+import seaborn as sns
+import matplotlib.pyplot as plt
+from scipy.stats import norm
+import statsmodels.api as sm
+
+try:
+    current_dir = os.path.dirname(os.path.abspath(__file__))
+except NameError:
+    current_dir = os.getcwd()
+parent_dir = os.path.join(current_dir, '..')
+simulated_data_path = os.path.join(parent_dir, 'data', 'simulation_data', 'simulated_predictions.parquet')
+model_path = os.path.join(parent_dir, 'models', 'linear_model.pkl')
+
+simulated_data = pd.read_parquet(simulated_data_path)
+
+with open(model_path, 'rb') as f:
+    model = pickle.load(f)
+
+X_simulated = simulated_data[['numeric_grade', 'sample_size', 'pollscore']]
+X_simulated = sm.add_constant(X_simulated)  # Add intercept term
+
+simulated_data['predicted_trump_pct'] = model.predict(X_simulated)
+
+mean_prediction = simulated_data['predicted_trump_pct'].mean()
+std_dev_prediction = simulated_data['predicted_trump_pct'].std()
+confidence_interval = norm.interval(0.95, loc=mean_prediction, scale=std_dev_prediction)
+
+print(f"Mean Predicted Trump Vote Share: {mean_prediction:.3f}")
+print(f"Standard Deviation of Predictions: {std_dev_prediction:.3f}")
+print(f"95% Confidence Interval: {confidence_interval[0]:.3f}, {confidence_interval[1]:.3f}")
+
+plt.figure(figsize=(10, 6))
+sns.histplot(x=np.array(simulated_data['predicted_trump_pct']), bins=30)
+plt.xlabel("Simulated Trump Vote Share")
+plt.ylabel("Frequency")
+plt.title("Distribution of Simulated Trump Vote Share")
+plt.show()
+
+```
+
+\begin{center}
+  \textbf{Python Output 6}
+\end{center}
+
+[@python]\
+
+These results imply that the Mean Predicted Trump Vote Share is about 0.493, which suggests from our model we can expect an average vote share of 49.3%.
+
+The SDP is 0.019, indicating that the dispersion of forecasted vote shares is low across this simulated set. Low variability in this model would suggest a consistency in the estimations across different simulated scenarios-meaning small fluctuations on the predictor variable set yield relatively similar outcomes.
+
+We also did the 95% Confidence Interval for the predicted share of Trump's votes to fall between 0.456 and 0.530. It serves to measure the amount of uncertainty associated with the prediction, such that with 95% confidence one would see the share of votes for Trump between 45.6% and 53.0%. It encapsulates the possible dispersion of Trump's share of votes based on assumptions and variability of the data simulation.
+
+This histogram of simulated predictions demonstrates graphically the distribution of the predicted share of Trump's votes in the above figure. The distribution is centered around the mean value 0.493, with a slight spread in order to extend the bounds of the confidence interval. The concentration around the mean epitomizes the model's consistency, while the width of the distribution corresponds to the standard deviation and confidence interval calculated, therefore supporting the stability of the model under the simulated conditions. This simulation, in fact, reveals that our model's estimates of Trump's vote share are really stable and unchanging over the diverse but plausible data scenarios. All the same, while huge robustness may be evident from the simulated data for this model, the fact is that many real factors, not modeled herein or under the simulation, may further introduce variability. It is for this reason that such simulation is instructive in showing the various ways an outcome could go but is also the type of evidence which should be interpreted cautiously, standing for only part of a wider-reaching analytics.
+
+# Result
+
 We use the poll-of-polls method to predict the percentage of the vote that Trump will receive. Specifically, we average the predictor variable, taking them as the predicted predictor variable. [@blumenthal2014], [@pasek2015]
 
 ```{python}
@@ -115,12 +343,12 @@ print(f"The predicted scaled Trump vote percentage is: {predicted_value:.3f}")
 ```
 
 \begin{center}
-  \textbf{Python Output 2}
+  \textbf{Python Output 7}
 \end{center}
 
 [@python]
 
-That is, in percentage, **49.7%**.
+That is, in percentage, **49.7%**. Note that this value is scaled that percentage received by Trump and Harris sums to 100%. That is, for example, our model predicts that if Trump gets 497 votes then we expect Harris to get approximately 503 votes, while other candidates get much less votes than both of Trump and Harris.
 
 # Discussion
 
